[package]
name = "nthook"
version = "0.1.0"
edition = "2021"

[dependencies.winapi]
version = "0.3.9"
features = [
    "processthreadsapi",
    "memoryapi",
    "winbase",
    "minwinbase",
    "minwindef",
    "wincon",
    "libloaderapi",
    "winnt",
    "synchapi",
    "debugapi",
    "fileapi",
    "psapi",
    "handleapi",
    "impl-default"
]

[dependencies.termcolor]
version = "1.2.0"

[profile.release]
lto = true
strip = true
codegen-units = 1